--- a/2-dbt-staging-and-sources/5-integration/1-cleaning-staging-layer.ipynb
+++ b/2-dbt-staging-and-sources/5-integration/1-cleaning-staging-layer.ipynb
@@ -5,7 +5,7 @@
    "id": "70e74bad-c1bd-474b-a0c0-0e0b302e2bf4",
    "metadata": {},
    "source": [
-    "# Cleaning the Staging Layer"
+    "# Introduction to Integration"
    ]
   },
   {
@@ -21,7 +21,7 @@
    "id": "8ce6fcf8-dee2-4feb-bcea-9fb638c6a123",
    "metadata": {},
    "source": [
-    "So far we have seen how to access our data from our data warehouse, and then perform some initial cleanup on that data through staging.  In this lesson, we'll take another look at the integration layer."
+    "So far we have seen how to access our data from our data warehouse, and then perform some initial cleanup on that data through staging.  Notably in staging, we do not combine data between different sources -- our hubspot data stays separate from our rds data.  However, in the integration layer, we will find ways for combining this data together."
    ]
   },
   {
@@ -34,10 +34,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad0e275a-8d24-4d83-8961-8a79be2dd0a9",
+   "id": "ca3c82ba-eab5-4f90-9fde-875815a7d704",
    "metadata": {},
    "source": [
-    "Let's take another look at our DBT pipeline diagram."
+    "Before moving to the integration layer, let's just review our general pattern."
    ]
   },
   {
@@ -74,6 +74,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9b89a0da-f3ed-485b-8aeb-f1e79636ecb1",
+   "metadata": {},
+   "source": [
+    "> As we can see below, we still have our hubspot folder separated from our rds folder."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "90b186cb-c68b-42a3-9a8c-d8938e20fe2f",
    "metadata": {},
    "source": [
@@ -85,96 +93,33 @@
    "id": "4afd6871-f573-4a5e-9d13-48873a95be6e",
    "metadata": {},
    "source": [
-    "In the staging layer, we have our models segmented out by the source that they came from.  For example, we have our information separated into data from `hubspot`, `mixpanel`, and `rds`.  However, within each of those models is overlapping data about contacts.  \n",
+    "So in the future, we will create a folder under models called  create a new folder called `integration`, and begin to combine our data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "17e4e6e4-cfeb-420b-a26d-1ead845e1658",
+   "metadata": {},
+   "source": [
+    "### Our plan going forward"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8018aa72-b553-4e70-a507-6a6c59cc27e6",
+   "metadata": {},
+   "source": [
+    "Here's how we'll begin to combine our data.  \n",
     "\n",
-    "In the integration layer we'll combine and merge data from different sources.  "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0fb77b62-c6d5-4b5a-b63c-d875e92e2c44",
-   "metadata": {},
-   "source": [
-    "### Some initial cleanup"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "36d21018-716c-4bf0-b2cf-67f407f1e9b1",
-   "metadata": {},
-   "source": [
-    "Before we move right into integrating our data, we'll make things easier on ourselves if we provide some initial cleanup at the staging layer.  This involves a couple of components."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e17244ae-c69b-43bc-af0e-9dcc9589e52e",
-   "metadata": {},
-   "source": [
-    "* Let's create a new branch called `integration_prep`, and get started."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e9ba9466-8211-431d-b930-d263c34c8528",
-   "metadata": {},
-   "source": [
-    "#### 2. Properly align"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2c1fa1fc-099a-44b1-88f3-8f8e50919b9c",
-   "metadata": {},
-   "source": [
-    "Before combining the data, we should clean up our staging layer to make our data more consistent.  This involves a couple of steps.  \n",
+    "1. We'll combine our data by selecting from each source and stacking our data on top of one another with a `union all` function.  \n",
     "\n",
-    "* We should align the columns in our various sources so that our columns are in the same order, with consistent names and consistent formatting"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "bdc2bb2c-8a8b-4980-b2b0-d0786e00f269",
-   "metadata": {},
-   "source": [
-    "If we look at the `stg_rds_customers.sql` file, we can see that does not currently align with the `stg_hubspot_contacts`.  \n",
+    "> Remember, that [the union function](https://docs.snowflake.com/en/sql-reference/operators-query.html#union-all) combines multiple select statements.  And the `union all` function includes any duplicates.\n",
     "\n",
-    "Place the columns in the same order, and with the same formatting.  Also, add a prefix to the id called `rds`, and name it `customer_id`."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a189998a-9b9d-4a78-aefd-08d0ae7571f6",
-   "metadata": {},
-   "source": [
-    "When complete, our rds customers model should look like the following:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d88f9ded-b9dc-4148-a9ca-805f0b132d23",
-   "metadata": {},
-   "source": [
-    "<img src=\"./cleaned-rds.png\" width=\"100%\">"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "dbb65ab1-270b-43fc-b06c-cbb9e0ead38f",
-   "metadata": {},
-   "source": [
-    "Notice that we achieved the following:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "fc1dddd0-9f32-47ac-ae28-dd1be2a72309",
-   "metadata": {},
-   "source": [
-    "* We added a prefix to our hubspot id, and labeled it as `contact_id`\n",
-    "* Our phone number is now formatted\n",
-    "* We changed `company_name` to `business_name`\n",
-    "* We ordered the columns to be consistent with our hubspot contacts table, where possible."
+    "2. Now that our data is combined, we'll then deduplicate our data by performing a group by on a column whose information should not be duplicated -- for example, a company name, for companies.  \n",
+    "\n",
+    "3. Now that our combined data has different primary keys than our source data, we'll then need to re-associate our models by use of primary keys and foreign keys.\n",
+    "\n",
+    "We'll move through these steps in the following lessons."
    ]
   },
   {
@@ -190,9 +135,21 @@
    "id": "b682cf30-f532-40e2-81d2-3ffec32bd2e6",
    "metadata": {},
    "source": [
-    "In this lesson, we got cleaned up our staging layer a bit.  And we accomplished this by first adding a prefix to our id.  This will allows us to better identify the source of our information later on.\n",
+    "In this lesson, we re-introduced our integration layer.  So far we have kept our data segmented by it's various sources.  In the integration layer, we'll combine the records in our sources together.  And we'll do so by:\n",
     "\n",
-    "The other step was to make our staging models more consistent.  We accomplished this by aligning the column names, and also aligning the order of our columns."
+    "1. Combining our data -- including duplicates -- with the `union all` function. \n",
+    "2. Deduplicating our data by grouping by on a unique column\n",
+    "3. Properly associating data to maintain our model relations now that our data has different ids."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a39958bb-b4f0-4f99-ba8b-e80e896d0d7d",
+   "metadata": {},
+   "source": [
+    "### Sources\n",
+    "\n",
+    "[Rittman Analytics Data Centralization](https://rittmananalytics.com/blog/2020/5/28/introducing-the-ra-warehouse-dbt-framework-how-rittman-analytics-does-data-centralization)"
    ]
   }
  ],
