--- a/3-refactoring-dbt/0-dbt-testing/1-yaml-debugging.ipynb
+++ b/3-refactoring-dbt/0-dbt-testing/1-yaml-debugging.ipynb
@@ -101,7 +101,7 @@
    "id": "31a6bbbe-a32c-4046-8f53-a4277516aad2",
    "metadata": {},
    "source": [
-    "Here, our tests are not even run because DBT is unable to interpret our yaml.  Notice that dbt is indicating two errors, something with `- name: dim_films` or perhaps the `columns` key directly after it.  If you're unable to spot which error is the problem, it's best to remove some of the yaml just to get it working.  For example, the next step might be to update the yaml to the following:"
+    "Here, our tests are not  run because DBT is unable to interpret our yaml.  Notice that dbt is indicating two errors, something with `- name: dim_films` or perhaps the `columns` key directly after it.  If you're unable to spot which error is the problem, it's best to remove some of the yaml just to get it working.  For example, the next step might be to update the yaml to the following:"
    ]
   },
   {
