--- a/3-refactoring-dbt/1-dbt-jinja/0-intro-to-jinja.ipynb
+++ b/3-refactoring-dbt/1-dbt-jinja/0-intro-to-jinja.ipynb
@@ -21,9 +21,9 @@
    "id": "178bc24b-08de-4733-80d7-ec2fc8e98570",
    "metadata": {},
    "source": [
-    "In DBT, we can reduce repetition in our code by working through a Python language like Jinja.  Using Jinja will allow us to take advantage of many of the same features of Python.  \n",
+    "In DBT, we can reduce repetition in our code by writing Jinja -- which is a programming language similar to Python.  \n",
     "\n",
-    "For example, as we'll see, with Jinja, we can make use of if else statements, and loops.  Let's get started."
+    "With Jinja, we can make use of if else statements, and loops.  Let's get started."
    ]
   },
   {
@@ -39,7 +39,7 @@
    "id": "e3491fa3-45dc-42ec-a4a3-e8abff3fa205",
    "metadata": {},
    "source": [
-    "We can see our first bit of jinja, whenever we open a new file in DBT.  Let's open a new file in DBT, and replace our code with the following:"
+    "We can see our first bit of jinja whenever we open a new file in DBT.  Let's open create a new file in DBT with the following code:"
    ]
   },
   {
@@ -107,13 +107,13 @@
    "id": "bcd95722-d2ae-4314-9569-61252afc4857",
    "metadata": {},
    "source": [
-    "In jinja, our code is distinguished between statements and expressions.  \n",
+    "In Jinja, our code is distinguished between statements and expressions.  \n",
     "\n",
     "* **Expressions** are indicated by the `{{ }}`, and are anything we want to display.  So above, we want to display each number, 0 through 2, inside of the select statement.  \n",
     "\n",
-    "* **Statements** are indicated by the `{% %}` and are used to contain logical code that we do not want to display.  So above, we do not want to render the for loop itself -- but rather, we just want the loop to occur, rendering the content inside.\n",
+    "* **Statements** are indicated by the `{% %}` and are used to contain logical code that we do not want to display.  So above, we do not want to render the for loop itself -- but rather, we just want the loop to occur.\n",
     "\n",
-    "We will use statements when writing `for` loops, and `if` `else` statements.  "
+    "We use *statements* whenever we write `for` loops, and `if` `else` statements.  "
    ]
   },
   {
@@ -121,9 +121,9 @@
    "id": "ddc562a1-3055-4129-a7e8-d8e6030df75c",
    "metadata": {},
    "source": [
-    "One thing to notice with jinja is that there is no concept of whitespace to indicate when a statement completes.  So instead we must explicitly end our statements.\n",
+    "> One thing to notice with jinja is that there is no concept of whitespace to indicate when a statement completes.  So instead we must explicitly end our statements.\n",
     "\n",
-    "For example, above, we complete our loop with a `endfor` statement.  And if we had an if else statement, we complete it with an `endif` statement."
+    "> For example, above, we complete our loop with a `endfor` statement.  And if we had an if else statement, we complete it with an `endif` statement."
    ]
   },
   {
@@ -177,9 +177,9 @@
    "source": [
     "This it turns out, is almost a valid select statement...but not quite.\n",
     "\n",
-    "The issue is that last union all statement.  We would like to union together each select statement -- but we do not need a union all statement at the very end.  \n",
+    "The issue is that last `union all` statement.  We would like to union together each select statement -- but we do not need a union all statement at the very end.  \n",
     "\n",
-    "We can get a union all expression after every select statement but the last one, if we change our Jinja to the following:"
+    "We can get a union all expression after every select statement except the last one if we change our Jinja to the following:"
    ]
   },
   {
@@ -216,7 +216,7 @@
    "id": "339f3930-2fab-4c03-a8ef-1dd4c3be0cf4",
    "metadata": {},
    "source": [
-    "And with this fix, we can click on the `compile` button and see that our sql will compile."
+    "And with this fix, we can click on the `preview` button and see that our sql will compile."
    ]
   },
   {
@@ -294,6 +294,21 @@
    "metadata": {},
    "source": [
     "We would like to have our colors wrapped in quotes.  Otherwise, sql will think that we're referring to a column name.  Well we can accomplish this in jinja with the following:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "87e791df-26f8-46ab-a843-c329be0b6d36",
+   "metadata": {},
+   "source": [
+    "```sql\n",
+    "{% set colors = ['red', 'blue', 'purple'] %}\n",
+    "\n",
+    "{% for color in colors %}\n",
+    "  select '{{ color }}' as number \n",
+    "  {% if not loop.last %} union all {% endif %} \n",
+    "{% endfor %}\n",
+    "```"
    ]
   },
   {
