--- a/3-refactoring-dbt/1-dbt-jinja/2-int-with-jinja.ipynb
+++ b/3-refactoring-dbt/1-dbt-jinja/2-int-with-jinja.ipynb
@@ -23,7 +23,7 @@
    "source": [
     "In the last couple of lessons, we saw how we can use Jinja to loop through select statements, and then combine them together with a union all function.\n",
     "\n",
-    "Now one natural place for performing a pattern like this is with our integration models.  For example, in our companies integration model, we select from each of our sources that have companies -- rds and hubspot, select the related fields and union them together.\n",
+    "Now one natural place for this pattern is in our integration models.  For example, in our companies integration model, we select from each of our sources that have companies -- rds and hubspot, select the related fields and union them together.\n",
     "\n",
     "In this lesson, we'll work towards refactoring our companies integration model with Jinja."
    ]
@@ -41,7 +41,7 @@
    "id": "dc7bb61c-6735-40c0-91f2-9bd0cb455af8",
    "metadata": {},
    "source": [
-    "Currently, our `int_companies.sql` may have some complicated code at the moment, but to make our refactoring job easier, let's create a new file, and use the following as a starting point."
+    "Currently, our `int_companies` model may have some complicated code, so to make our refactoring job easier, let's create a new file, and copy over the following code to use as a starting point."
    ]
   },
   {
@@ -129,7 +129,7 @@
    "id": "03413b4c-e3c0-49ff-8f45-ec5f87e680c0",
    "metadata": {},
    "source": [
-    "Now above we are selecting the `name` column from each table.  But in our original query, we selected multiple columns from our source tables like so:"
+    "So above we are selecting the `name` column from each table.  But in our original query, we selected multiple columns from our source tables like so:"
    ]
   },
   {
@@ -152,9 +152,9 @@
    "id": "3b00e14d-cbb2-4a94-880e-6c516d1e39eb",
    "metadata": {},
    "source": [
-    "One challenge of the above, is that for each source, we only want to select the company_id when we are selecting from that source, and otherwise we want to select null.\n",
+    "One challenge of the above, is that for each source, we only want to select the `company_id` when we are selecting from that source, and otherwise we want to select null.\n",
     "\n",
-    "For example, when our source is hubspot, then we want to select company_id as hubspot_company_id but otherwise, we want to select null.  It turns out we can accomplish something like this with a one line if else statement.  In Jinja, this looks like the following:"
+    "For example, when our source is hubspot, then we want to select `company_id as hubspot_company_id` but otherwise, we want to select null.  It turns out we can accomplish something like this with a one line if else statement.  In Jinja, this looks like the following:"
    ]
   },
   {
