--- a/3-refactoring-dbt/0-dbt-testing/0-testing.ipynb
+++ b/3-refactoring-dbt/0-dbt-testing/0-testing.ipynb
@@ -21,7 +21,7 @@
    "id": "ac95c0a2-159e-4887-b2dc-c334a534fa8e",
    "metadata": {},
    "source": [
-    "Another benefit of DBT is that it allows for testing that our data meets certain expectations.  For example, we can use tests to ensure that no data in a specific column has null values.  In this lesson, we'll see how to DBT can allow to write some tests to ensure data quality."
+    "Another benefit of DBT is that it allows us to test that our data.  For example, we can use tests to ensure that no data in a specific column has null values, or that all values in a column are unique.  In this lesson, we'll see how to DBT can allow to write some tests to ensure data quality."
    ]
   },
   {
@@ -37,9 +37,9 @@
    "id": "bbd920af-2563-4276-93e2-5b1a5b671488",
    "metadata": {},
    "source": [
-    "With DBT, we can write both custom tests of our data or can use some tests that DBT provides for us out of the box.  Let's start by seeing some assertions that DBT provides for us.  \n",
+    "With DBT, we can use tests that DBT provides for us out of the box.  Let's start.  \n",
     "\n",
-    "DBT provides helpers to quickly test the following of our data:"
+    "The following helpers that DBT provides to test our data are the following:"
    ]
   },
   {
@@ -141,7 +141,7 @@
    "id": "95b76835-48e8-4c39-9fce-cb955976d035",
    "metadata": {},
    "source": [
-    "In the dashboard abvoe, we can view both the `logs` of the entire run, and there is also separate entry for our specific test: `not_null_stg_hubspot_contacts_first_name`.  If we click on that `not_null_stg_hubspot_contacts_first_name` drop down, we see more information."
+    "In the dashboard above, we can view both the `logs` of the entire run, and there is also separate entry for our specific test: `not_null_stg_hubspot_contacts_first_name`.  If we click on that `not_null_stg_hubspot_contacts_first_name` drop down, we see more information."
    ]
   },
   {
@@ -173,7 +173,7 @@
    "id": "b24078ba-54a9-429b-b413-aa18ffea87f2",
    "metadata": {},
    "source": [
-    "So above, the key part is in the second select statement -- our subquery.  In the subquery, DBT is selecting from the `stg_hubspot_contacts` table for any places where the first `first_name` is null.  We can see that then in the above select, when the subquery returns any records, it will run an error and a warning."
+    "So above, the key part is in the second select statement -- our subquery.  In the subquery, DBT is selecting from the `stg_hubspot_contacts` table for any places where the first `first_name` is null.  Then, in the first select, when the subquery returns any records, it will run an error and a warning."
    ]
   },
   {
