--- a/0-dbt-setup/1-dbt-setup-partner-connect.ipynb
+++ b/0-dbt-setup/1-dbt-setup-partner-connect.ipynb
@@ -140,6 +140,57 @@
    "source": [
     "Also notice, that DBT is given access to the PC_DBT_DB database and using the PC_DBT_WH.  Both resources were created via signing up for partner connect.  The role it operates as is PC_DBT_ROLE.  "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Developing with DBT"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "From here, we can make sure that the connection to snowflake works.  Click on the develop button in the top right."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "From here, create a new file to execute sql on by clicking on the green button."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> <img src=\"./try.png\" width=\"70%\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And then in the following run a query against some preloaded data in our snowflake_sample_data database by writing, the following **saving the file**, and then clicking **preview** in the bottom pane towards the left.\n",
+    "\n",
+    "`select * from SNOWFLAKE_SAMPLE_DATA.TPCDS_SF100TCL.CALL_CENTER limit 2`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"./try-it.png\" width=\"100%\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If everything works, we should see the above."
+   ]
   }
  ],
  "metadata": {
