add changes to partner connect

--- a/0-dbt-setup/1-dbt-setup-partner-connect.ipynb
+++ b/0-dbt-setup/1-dbt-setup-partner-connect.ipynb
@@ -27,9 +27,11 @@
    "source": [
     "### Steps\n",
     "\n",
-    "Move through option one in the DBT documentation.  It explains how to set up partner connect, but is off by one point.\n",
+    "In this lesson we'll set up DBT using snowflake's DBT Partner Connect.  \n",
     "\n",
-    "Access to Partner Connect is available under the dashboard section of Admin > Partner Connect.\n",
+    "> This reading is derived from the DBT documentation found [here](https://docs.getdbt.com/docs/get-started/getting-started/getting-set-up/setting-up-snowflake).\n",
+    "\n",
+    "Access to Partner Connect is available by logging into snowflake, and then going to the dashboard section of `Admin` > `Partner Connect`.\n",
     "\n",
     "<img src=\"./partner-connect.png\" width=\"50%\">"
    ]
@@ -52,7 +54,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From there, we will be taken to the following.  Now we should grant usage to the **snowflake_sample_data** database.  (In the image below we show granting usage to two separate databases).  \n",
+    "From there, we will be taken to the following.  Now we should grant usage to the **snowflake_sample_data** database.  (In the image below you can see the grant of access to the raw and analytics db -- do the same thing but for **snowflake_sample_data**).  \n",
     "\n",
     "> If you mess this up, we can fix it later."
    ]
@@ -96,7 +98,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we should be in good shape, but if we do need to change something we can do so by clicking on the gear icon in the top right, followed by account settings, and then clicking on Partner Connection Trial."
+    "### Seeing the Results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we should be in good shape with those simple steps above, but it's good to see where we can make in modifications in DBT. \n",
+    "\n",
+    "Click on the gear icon in the top right, followed by account settings, and then click on Partner Connection Trial."
    ]
   },
   {
@@ -117,28 +128,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"./partner-settings.png\">"
+    "> <img src=\"./partner-settings.png\" width=\"70%\">"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The main component to confirm is that the account is correct.  It should match the account in the snowflake url."
+    "The main component to confirm is that the account is correct.  It should match the snowflake account, which can be seen in the snowflake url."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"./snowflake-accnt.png\" width=\"70%\">"
+    "> <img src=\"./snowflake-accnt.png\" width=\"70%\">"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Also notice, that DBT is given access to the PC_DBT_DB database and using the PC_DBT_WH.  Both resources were created via signing up for partner connect.  The role it operates as is PC_DBT_ROLE.  "
+    "Also notice, that DBT is given access to the `PC_DBT_DB` database and using the `PC_DBT_WH`.  Both resources were created via signing up for partner connect.  The role it operates as is `PC_DBT_ROLE`.  "
    ]
   },
   {
@@ -152,7 +163,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From here, we can make sure that the connection to snowflake works.  Click on the develop button in the top right."
+    "From here, we can make sure that the connection to snowflake works.  Click on the `develop` button in the top right of DBT."
    ]
   },
   {
@@ -189,7 +200,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If everything works, we should see the above."
+    "> **Warning**: If you do not **save** the file before clicking preview, the preview will not work."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If everything works, we should see the results above."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Summary\n",
+    "\n",
+    "In this lesson, we saw how to connect DBT to our Snowflake account with DBT partner connect.  If you were unable to connect with partner connect, and would like to try to set it up manually [here](https://colab.research.google.com/github/analytics-engineering-jigsaw/dbt/blob/main/0-dbt-setup/1-dbt-setup-snowflake.ipynb). "
    ]
   }
  ],
