--- a/2-dbt-staging-and-sources/2-sources/3-normalizing-staging-data.ipynb
+++ b/2-dbt-staging-and-sources/2-sources/3-normalizing-staging-data.ipynb
@@ -139,7 +139,7 @@
    "id": "089444f3-2ae9-4614-8a40-20fdf964b15b",
    "metadata": {},
    "source": [
-    "So we have selected the relevant columns, but notice that we do not have an id for companies.  For that, we can simply use something that should be unique like the `company_name`.  We also can group by the company_name just in case there are any duplicates."
+    "So we have selected the relevant columns, but notice that we do not have an id for companies.  For that, we can simply use something that should be unique like the `company_name`.  We also can group by the `company_name` just in case there are any duplicates."
    ]
   },
   {
@@ -189,7 +189,7 @@
    "id": "baf98178-433a-459f-9b4b-bb15da017449",
    "metadata": {},
    "source": [
-    "With that in place, we can then associate an contact to it's related company through the company id."
+    "With that in place, we can then associate a contact to it's related company through the company id."
    ]
   },
   {
@@ -229,7 +229,7 @@
    "id": "fd79d844-3812-4db2-a2cd-76c1f1e34de5",
    "metadata": {},
    "source": [
-    "Finally, we'll want to associate add the companies id to the related customer. \n",
+    "Finally, we'll want to associate the companies id to the related customer. \n",
     "\n",
     "We can do so with the following."
    ]
@@ -359,7 +359,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.6 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -373,7 +373,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.6"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "b0fa6594d8f4cbf19f97940f81e996739fb7646882a419484c72d19e05852a7e"
+   }
   }
  },
  "nbformat": 4,
