--- a/2-dbt-staging-and-sources/3-snowflake-staging/1-loading-data.ipynb
+++ b/2-dbt-staging-and-sources/3-snowflake-staging/1-loading-data.ipynb
@@ -85,7 +85,11 @@
    "id": "3d677d85-6da2-4889-baf4-43af2e7cb613",
    "metadata": {},
    "source": [
-    "We can get to the user interface for staging by clicking on the databases dashboard."
+    "We can get to the user interface for staging by clicking on the databases dashboard.\n",
+    "\n",
+    "> Create a new database called labs_db if you do not already have one.\n",
+    "\n",
+    "From there, if you click on `stages`, you'll see that we don't have any.  "
    ]
   },
   {
@@ -93,57 +97,31 @@
    "id": "5fd3f7f3-ac28-4498-b5ca-f7b85713b62e",
    "metadata": {},
    "source": [
-    "> <img src=\"./db-dashboard.png\" width=\"60%\">"
+    "> <img src=\"./stages_create.png\" width=\"60%\">"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "9a2d786e-f8c1-444f-bae9-e4fd564fcca0",
+   "id": "41c5f46f",
    "metadata": {},
    "source": [
-    "From there, we can click on the database that we want to create the stage for, and from there can click on the panel for stages.\n",
-    "\n",
-    "> For this lesson, we can use the `labs_db` database."
+    "Then click on `Create` > `Stage` > `aws_s3` ."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "74fa720e-79cf-4899-9235-6500f302f4f4",
+   "id": "6264023a",
    "metadata": {},
    "source": [
-    "> <img src=\"./stage-panel.png\" width=\"100%\">"
+    "> <img src=\"./stage-aws-s3.png\" width=\"40%\">"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "fe47d3d6-214a-47c9-982d-8875f4e0f808",
+   "id": "e41d1fa9",
    "metadata": {},
    "source": [
-    "Now, if you click on the create button to the left under `stage`, from there click on the option for `aws s3`."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0d91ef41-e7f8-457d-bcf5-a74bed0a874f",
-   "metadata": {},
-   "source": [
-    "> <img src=\"./stage-s3.png\" width=\"100%\">"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f2b58f35-5ef3-41e5-9351-ac51e0da690d",
-   "metadata": {},
-   "source": [
-    "Then we can fill in the following information, and after the form is filled out, click on `Show SQL`."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9e9f0450-0af7-4def-8396-98495609ddef",
-   "metadata": {},
-   "source": [
-    "> <img src=\"./imdb_stage.png\" width=\"100%\">"
+    "We'll need to fill in the following information."
    ]
   },
   {
@@ -158,16 +136,6 @@
     "* URL: `s3://jigsaw-labs-student/imdb_movies.csv`\n",
     "* AWS Key ID: `AKIARIMMA5YSLC62OGJ4`\n",
     "* AWS Secret ID: `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`"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6593da3c-c0db-4d48-bfc0-e05ce0eecae4",
-   "metadata": {},
-   "source": [
-    "Now once we click on Show SQL, next up, we can copy that SQL into the worksheet.  \n",
-    "\n",
-    "> Do not yet run that SQL -- we'll do so below."
    ]
   },
   {
@@ -212,9 +180,27 @@
    "metadata": {},
    "source": [
     "```sql\n",
+    "create schema labs_db.imdb;\n",
+    "\n",
     "CREATE STAGE \"LABS_DB\".\"IMDB\".imdb_stage URL = 's3://jigsaw-labs-student/imdb_movies.csv'\n",
     "CREDENTIALS = (AWS_KEY_ID = 'AKIARIMMA5YSLC62OGJ4' AWS_SECRET_KEY = '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');\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "964bb0ef",
+   "metadata": {},
+   "source": [
+    "<img src=\"./stage-created.png\" width=\"70%\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ef40fe90",
+   "metadata": {},
+   "source": [
+    "> Notice under privileges that the stage is only available to the accountadmin.  If you would like to make it available to additional users, you will need to click on `+privilege`.  Otherwise, only account admin will be able to see the stage."
    ]
   },
   {
@@ -232,7 +218,7 @@
    "metadata": {},
    "source": [
     "```sql\n",
-    "list @imdb.imdb_stage;\n",
+    "list @labs_db.imdb.imdb_stage;;\n",
     "```"
    ]
   },
@@ -316,7 +302,7 @@
    "metadata": {},
    "source": [
     "```sql\n",
-    "create table \"LABS_DB\".\"IMDB\".\"movies\" (\n",
+    "create table labs_db.imdb.movies (\n",
     "  title varchar (100),  \n",
     "  genre string,\n",
     "  budget integer,\n",
@@ -350,7 +336,7 @@
    "metadata": {},
    "source": [
     "```sql\n",
-    "COPY INTO \"LABS_DB\".\"IMDB\".\"movies\" FROM @imdb.imdb_stage\n",
+    "COPY INTO labs_db.imdb.movies FROM @labs_db.imdb.imdb_stage\n",
     "file_format = (skip_header = 1);\n",
     "```"
    ]
@@ -397,7 +383,7 @@
    "metadata": {},
    "source": [
     "```sql\n",
-    "COPY INTO \"LABS_DB\".\"IMDB\".\"movies\" FROM @imdb.imdb_stage\n",
+    "COPY INTO labs_db.imdb.movies FROM @labs_db.imdb.imdb_stage\n",
     "ON_ERROR=CONTINUE\n",
     "file_format = (skip_header = 1);\n",
     "```"
@@ -470,7 +456,7 @@
    "metadata": {},
    "source": [
     "```sql\n",
-    "COPY INTO \"LABS_DB\".\"IMDB\".\"movies\" FROM @imdb.imdb_stage\n",
+    "COPY INTO labs_db.imdb.movies FROM @labs_db.imdb.imdb_stage\n",
     "ON_ERROR=CONTINUE\n",
     "file_format = (skip_header = 1);\n",
     "```"
@@ -479,7 +465,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.6 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -493,7 +479,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.6"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "b0fa6594d8f4cbf19f97940f81e996739fb7646882a419484c72d19e05852a7e"
+   }
   }
  },
  "nbformat": 4,
