update snowflake files

--- a/2-dbt-staging-and-sources/3-snowflake-staging/1-loading-data-original.ipynb
+++ b/2-dbt-staging-and-sources/3-snowflake-staging/1-loading-data-original.ipynb
@@ -5,7 +5,7 @@
    "id": "d946f280-8ca7-4382-956e-470ccb5372ff",
    "metadata": {},
    "source": [
-    "# Loading Data With Staging"
+    "# Loading Data With Staging - Original"
    ]
   },
   {
@@ -26,26 +26,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5d373fe-5eb0-44e6-a16b-09bc467a2bc0",
-   "metadata": {},
-   "source": [
-    "### What's staging?\n",
-    "\n",
-    "Staging -- in this case -- is a *snowflake* term.  And it allows snowflake to know about an S3 bucket -- even query that bucket, and then load the data into a snowflake table.  So staging can serve as the connection between a datalake in s3 to our data warehouse in snowflake.\n",
-    "\n",
-    "For example, if saw we were working with flight data, we could have saved that data in a csv in a s3 bucket, and then used snowflake's staging feature to load the data into a database."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f0ca954c-fdee-43c6-a840-8a6e54e777f6",
-   "metadata": {},
-   "source": [
-    "<img src=\"./snowflake-stage-diagram.png\" width=\"60%\">"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "1353278d-a868-479d-b579-dbd9f3a3ce83",
    "metadata": {},
    "source": [
@@ -57,7 +37,7 @@
    "id": "8b70bda6-5d10-4a5e-8d94-5e2ff8080ccf",
    "metadata": {},
    "source": [
-    "Ok, so in this case we have already have a loaded a csv file for movies in AWS S3."
+    "Now we already have a loaded a csv file for movies in AWS S3."
    ]
   },
   {
@@ -73,11 +53,7 @@
    "id": "946a1ac5-5143-4e9d-980c-01ff98b596da",
    "metadata": {},
    "source": [
-    "And we have also created for you, a user in AWS that has access to this s3 data.  \n",
-    "\n",
-    "> We did so, following [these instructions](https://docs.snowflake.com/en/user-guide/data-load-s3-config).\n",
-    "\n",
-    "To load data into our snowflake the first step is to create a *stage*."
+    "And we have also created for you, a user in AWS that has access to this s3 data.  To load data into our snowflake instance the first step is to create a *stage*."
    ]
   },
   {
@@ -93,9 +69,35 @@
    "id": "a9cc24da-de4f-4932-8fb7-873a94a9dfca",
    "metadata": {},
    "source": [
-    "So one way to create a stage is through the staging UI.  We can get to the user interface for staging by clicking on the databases dashboard.  \n",
+    "In snowflake, staging is where we can store raw data before it is loaded into a snowflake table.  Storing the data in staging first allows us to potentially only select certain rows to move into a table, or to transform that data before loading it into a table."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "617258a1-d06a-40e1-b25f-9dd4ae0178da",
+   "metadata": {},
+   "source": [
+    "Ok, so let's see how we can create a stage."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3d677d85-6da2-4889-baf4-43af2e7cb613",
+   "metadata": {},
+   "source": [
+    "We can get to the user interface for staging by clicking on the databases dashboard.\n",
     "\n",
-    "So click on `data > databases`.  Then the name of the database, and then a schema (like public), where you would want to create the stage."
+    "> Create a new database called labs_db if you do not already have one.\n",
+    "\n",
+    "From there, if you click on `stages`, you'll see that we don't have any.  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5fd3f7f3-ac28-4498-b5ca-f7b85713b62e",
+   "metadata": {},
+   "source": [
+    "> <img src=\"./stages_create.png\" width=\"60%\">"
    ]
   },
   {
@@ -116,10 +118,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "faadf18b-2e84-44c3-b9ea-a77988b497e2",
+   "id": "e41d1fa9",
    "metadata": {},
    "source": [
-    "But in this case, we won't create a stage through the UI.  Instead, we'll create a stage through some snowflake command in the worksheet."
+    "We'll need to fill in the following information."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "66c4f506-c9c1-41da-b394-3442b518e63a",
+   "metadata": {},
+   "source": [
+    "The information is the following:\n",
+    "    \n",
+    "* Name: `imdb_stage`\n",
+    "* Schema name: `IMDB`\n",
+    "* URL: `s3://jigsaw-labs-student/imdb_movies.csv`\n",
+    "* AWS Key ID: `AKIARIMMA5YSLC62OGJ4`\n",
+    "* AWS Secret ID: `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`"
    ]
   },
   {
@@ -127,7 +143,7 @@
    "id": "e2d0f1c3-23cb-4036-973a-22852071dd53",
    "metadata": {},
    "source": [
-    "### Creating the Stage in a worksheet"
+    "### Creating the Stage in Snowflake"
    ]
   },
   {
@@ -135,9 +151,7 @@
    "id": "ea690dcb-6ac0-40e6-9c7e-8d8ddc0b3d32",
    "metadata": {},
    "source": [
-    "Now before we create the stage, we first need to go to a snowflake worksheet and specify that we are using the correct database.\n",
-    "\n",
-    "So specify that you are using the database where you would like to create the stage."
+    "Now before we create the stage, we first need to go to a snowflake worksheet and specify that we are using the correct database."
    ]
   },
   {
@@ -146,7 +160,7 @@
    "metadata": {},
    "source": [
     "```sql\n",
-    "Use database pc_dbt_db;\n",
+    "Use database labs_db;\n",
     "```"
    ]
   },
@@ -155,38 +169,22 @@
    "id": "ae845454-cbc7-47c6-84c4-ff677c416fe3",
    "metadata": {},
    "source": [
-    "And from there we can create a schema to place the stage, and then create stage using the SQL we generated above.\n",
+    "And from there we can create the stage using the SQL we generated above.\n",
     "\n",
     "> Notice that we have to fill in the AWS secret key."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "24729293-64b5-423f-a49f-78fd15850367",
-   "metadata": {},
-   "source": [
-    "> For me the code looks like the following."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "cdbf819f-2509-4068-8584-3d81c13b70e2",
+   "id": "4573b6f6-e67f-4cce-ad34-1f02e0d3f1b8",
    "metadata": {},
    "source": [
     "```sql\n",
-    "create schema pc_dbt_db.imdb;\n",
+    "create schema labs_db.imdb;\n",
     "\n",
-    "CREATE STAGE pc_dbt_db.imdb.imdb_movies_stage URL = 's3://jigsaw-labs-student/imdb_movies.csv'\n",
-    "CREDENTIALS = (AWS_KEY_ID = 'AKIARIMMA5YSEFN6KMGI' AWS_SECRET_KEY = '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');\n",
+    "CREATE STAGE \"LABS_DB\".\"IMDB\".imdb_stage URL = 's3://jigsaw-labs-student/imdb_movies.csv'\n",
+    "CREDENTIALS = (AWS_KEY_ID = 'AKIARIMMA5YSLC62OGJ4' AWS_SECRET_KEY = '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');\n",
     "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a873a1c9-b6a7-4da2-b765-4b59da6b5d83",
-   "metadata": {},
-   "source": [
-    "> The credentials are AWS credentials, that are associated with an AWS user that can access the jigsaw-labs-student s3 bucket."
    ]
   },
   {
@@ -216,11 +214,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ceb12db6-52a0-4c51-a0b5-75d2608cdf08",
+   "id": "03f1c26f-cbb0-4f1f-bd85-d01f2e6cec5f",
    "metadata": {},
    "source": [
     "```sql\n",
-    "list @pc_dbt_db.imdb.imdb_movies_stage;\n",
+    "list @labs_db.imdb.imdb_stage;;\n",
     "```"
    ]
   },
@@ -254,7 +252,7 @@
     "  c.$5 as year,\n",
     "  c.$6 as month,\n",
     "  c.$7 as revenue\n",
-    "from @pc_dbt_db.imdb.imdb_movies_stage as c;\n",
+    "from @imdb.imdb_stage as c;\n",
     "```"
    ]
   },
@@ -304,7 +302,7 @@
    "metadata": {},
    "source": [
     "```sql\n",
-    "create table pc_dbt_db.imdb.movies (\n",
+    "create table labs_db.imdb.movies (\n",
     "  title varchar (100),  \n",
     "  genre string,\n",
     "  budget integer,\n",
@@ -338,7 +336,7 @@
    "metadata": {},
    "source": [
     "```sql\n",
-    "COPY INTO pc_dbt_db.imdb.movies FROM @labs_db.imdb.imdb_movies_stage\n",
+    "COPY INTO labs_db.imdb.movies FROM @labs_db.imdb.imdb_stage\n",
     "file_format = (skip_header = 1);\n",
     "```"
    ]
@@ -385,7 +383,7 @@
    "metadata": {},
    "source": [
     "```sql\n",
-    "COPY INTO pc_dbt_db.imdb.movies FROM @labs_db.imdb.imdb_movies_stage\n",
+    "COPY INTO labs_db.imdb.movies FROM @labs_db.imdb.imdb_stage\n",
     "ON_ERROR=CONTINUE\n",
     "file_format = (skip_header = 1);\n",
     "```"
@@ -433,10 +431,8 @@
     "Then we created the stage, and viewed some of the data in our stage.\n",
     "\n",
     "```sql\n",
-    "create schema pc_dbt_db.imdb;\n",
-    "\n",
-    "CREATE STAGE pc_dbt_db.imdb.imdb_movies_stage URL = 's3://jigsaw-labs-student/imdb_movies.csv'\n",
-    "CREDENTIALS = (AWS_KEY_ID = 'AKIARIMMA5YSEFN6KMGI' AWS_SECRET_KEY = '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');\n",
+    "CREATE STAGE \"LABS_DB\".\"IMDB\".imdb_stage URL = 's3://jigsaw-labs-student/imdb_movies.csv'\n",
+    "CREDENTIALS = (AWS_KEY_ID = 'AKIARIMMA5YSLC62OGJ4' AWS_SECRET_KEY = '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');\n",
     "```\n",
     "\n",
     "```sql\n",
@@ -448,7 +444,7 @@
     "  c.$5 as year,\n",
     "  c.$6 as month,\n",
     "  c.$7 as revenue\n",
-    "from @imdb.imdb_movies_stage as c;\n",
+    "from @imdb.imdb_stage as c;\n",
     "```\n",
     "\n",
     "From there, we created the relevant table, and copied data into our stage. "
@@ -460,7 +456,7 @@
    "metadata": {},
    "source": [
     "```sql\n",
-    "COPY INTO imdb.imdb.movies FROM @imdb.imdb.imdb_movies_stage\n",
+    "COPY INTO labs_db.imdb.movies FROM @labs_db.imdb.imdb_stage\n",
     "ON_ERROR=CONTINUE\n",
     "file_format = (skip_header = 1);\n",
     "```"
