--- a/2-dbt-staging-and-sources/3-snowflake-staging/2-northwinds-data.ipynb
+++ b/2-dbt-staging-and-sources/3-snowflake-staging/2-northwinds-data.ipynb
@@ -78,8 +78,8 @@
    "id": "79f77826-62a5-4f11-90a6-b2466f6b7ee2",
    "metadata": {},
    "source": [
-    "* KEY_ID: `'AKIARIMMA5YSLC62OGJ4'`\n",
-    "* SECRET: `'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'`"
+    "* KEY_ID: `'AKIARIMMA5YSEFN6KMGI'`\n",
+    "* SECRET: `'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'`"
    ]
   },
   {
@@ -210,7 +210,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.6 64-bit",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -224,7 +224,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.9.12"
   },
   "vscode": {
    "interpreter": {
