--- a/2-dbt-staging-and-sources/1-staging/2a-staging-lab-solution.ipynb
+++ b/2-dbt-staging-and-sources/1-staging/2a-staging-lab-solution.ipynb
@@ -38,7 +38,7 @@
     "      FROM renamed\n",
     ")\n",
     "\n",
-    "SELECT * FROM source\n",
+    "SELECT * FROM renamed\n",
     "```"
    ]
   },
@@ -67,7 +67,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
