--- a/2-dbt-staging-and-sources/2-sources/3-normalizing-staging-data.ipynb
+++ b/2-dbt-staging-and-sources/2-sources/3-normalizing-staging-data.ipynb
@@ -44,6 +44,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d982225f-4578-4615-959a-b887b92ea892",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "```sql\n",
+    "select * from customers limit 3;\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "1c2eb0e0-330e-4aae-a5e3-62be7574c902",
    "metadata": {},
    "source": [
@@ -359,7 +371,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.6 64-bit",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -373,7 +385,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.9.12"
   },
   "vscode": {
    "interpreter": {
