add mart lab and reading

--- a/2-dbt-staging-and-sources/5-integration/5a-mart-reading-core.ipynb
+++ b/2-dbt-staging-and-sources/5-integration/5a-mart-reading-core.ipynb
@@ -37,7 +37,11 @@
    "id": "c2384ac8-792c-4f1f-a4c0-77c5547b6038",
    "metadata": {},
    "source": [
-    "We can begin by creating a new branch called `build_mart`, and then creating a folder `mart` with a new file called `mart_companies_dim.sql`."
+    "We can begin by creating a new branch called `build_mart`.  From the `main` branch, run the following.\n",
+    "\n",
+    "`git checkout -b build_mart`\n",
+    "\n",
+    "And then from the `build_mart` branch, create a folder `mart` with a new file called `mart_companies_dim.sql`."
    ]
   },
   {
@@ -75,7 +79,23 @@
    "id": "03887c78-34ac-4afb-b809-65e458de0f07",
    "metadata": {},
    "source": [
-    "And if we preview the data, we'll see the following."
+    "Then call `dbt run`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7dd29e47-0d05-40bc-88d7-ad9dd750401e",
+   "metadata": {},
+   "source": [
+    "And then confirm that our `dev.mart_companies_dim` table has the correct columns."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8b41d8c6-caab-429f-b8a8-976593d51cb9",
+   "metadata": {},
+   "source": [
+    "`psql -d northwinds -c \"select * from dev.mart_companies_dim limit 3\"`"
    ]
   },
   {
@@ -99,9 +119,10 @@
    "id": "1ce3cfca-085b-49c0-824b-31f894cf5969",
    "metadata": {},
    "source": [
-    "Finally, so far whenever we have run a dbt model, we have created a view as a result.  Remember that when we create a view, the data is not actually stored in a new table.  Rather, only the query is stored, and this query is re-run each time.\n",
+    "Finally, so far whenever we have run a dbt model, we have created a *view* as a result.  Remember that when we create a view, the data is not actually stored in a new table.  Rather, only the \n",
+    "*query* is stored, and this query is re-run each time.\n",
     "\n",
-    "Because our mart models will be directly queried by our various teams, we should turn these models into tables to make them faster to query.  We can do so by adding the following line to the top of the file:"
+    "However, because our **mart models** will be directly queried by our various teams, we should turn these models into tables to make retrieval faster.  We can do so by adding the following line to the top of the file:"
    ]
   },
   {
