--- a/2-dbt-staging-and-sources/5-integration/6-mart-lab-core.ipynb
+++ b/2-dbt-staging-and-sources/5-integration/6-mart-lab-core.ipynb
@@ -103,17 +103,7 @@
    "id": "98ac7cf7-78e5-4994-bd60-e291cfb67a80",
    "metadata": {},
    "source": [
-    "Now that we have properly associated the contacts to the company with the company id, we can remove the hubspot and rds ids in the companies table (if it existed there)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1183af11-a9bc-4182-848e-4e42291dd177",
-   "metadata": {},
-   "source": [
-    "Run the following.\n",
-    "\n",
-    "> `psql -d northwinds -c \"select * from dev.mart_companies_dim limit 3\"`"
+    "Now that we have properly associated the contacts to the company with the company id, we can remove the hubspot and rds ids in the companies table."
    ]
   },
   {
@@ -121,7 +111,7 @@
    "id": "f86612eb-c01d-4f83-aac4-21119ac572de",
    "metadata": {},
    "source": [
-    "> If needed, update the companies table so that it looks like the following."
+    "> Our update companies table will look like the following."
    ]
   },
   {
@@ -145,7 +135,7 @@
    "id": "24d6638e-3424-4ab7-9438-d817654be0ac",
    "metadata": {},
    "source": [
-    "### Verifying in postgres"
+    "### Verifying in snowflake"
    ]
   },
   {
@@ -153,17 +143,47 @@
    "id": "555d0235-7f16-47d8-9af5-e33f5a79c7cc",
    "metadata": {},
    "source": [
-    "From here, we should move over to postgres, and confirm that we have two materialized tables that have been created (in the dev folder).\n",
-    "\n",
-    "We should confirm that we have the "
+    "From here, we should move over to snowflake, and we can check that we have two new tables that are created."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c0de20f6-654d-4a70-b6c1-a6ffb10d00fb",
+   "id": "3c785c2c-d06b-4f58-9679-a105814dbdd3",
    "metadata": {},
    "source": [
-    "<img src=\"./updated-tables.png\" width=\"60%\">"
+    "`psql -d northwinds`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b63f9d56-b0b0-432d-a4c9-dcff877108d3",
+   "metadata": {},
+   "source": [
+    "`\\dt dev.*`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "62936d6c-986c-4a19-9833-e9b6f665b6a8",
+   "metadata": {},
+   "source": [
+    "```md\n",
+    "List of relations\n",
+    " Schema |        Name         | Type  |    Owner\n",
+    "--------+---------------------+-------+-------------\n",
+    " dev    | companies_dim       | table | jeffreykatz\n",
+    " dev    | contacts_dim        | table | jeffreykatz\n",
+    " dev    | northwinds_hubspot  | table | jeffreykatz\n",
+    " dev    | northwinds_mixpanel | table | jeffreykatz\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3e252481-5421-428b-a057-5ab1e5972877",
+   "metadata": {},
+   "source": [
+    "We can see that we have our seed data in our dev schema as well.  If we want, we can clean that up by configuring our [seed data](https://docs.getdbt.com/reference/seed-configs)."
    ]
   },
   {
@@ -172,47 +192,6 @@
    "metadata": {},
    "source": [
     "From there, let's make sure that our data is properly associated.  We should be able to join our contacts to their related company using the `company_pk` key."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "59b8339f-2f21-4121-9404-ee8d660edbde",
-   "metadata": {},
-   "source": [
-    "> So below, we can see that we are able to join the data together."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "daa50a82-7709-4000-9c83-95ad00feefe7",
-   "metadata": {},
-   "source": [
-    "<img src=\"./verify_data.png\" width=\"100%\">"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "597c6f18-8e1b-41fd-ae03-bf6a90396a12",
-   "metadata": {},
-   "source": [
-    "And from there, we can look back to our earlier data to confirm that our records are properly linked."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "30911cc8-4334-4f62-b83c-a2d7303b99c8",
-   "metadata": {},
-   "source": [
-    "> For example, below we select from our hubspot data for Ann Devon's record, and can see that she is in fact connected to Eastern Connection. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8b951856-0823-4991-9f1d-6f67fb69e51d",
-   "metadata": {},
-   "source": [
-    "<img src=\"./hubspot-data.png\" width=\"100%\">\n",
-    "\n"
    ]
   },
   {
@@ -230,7 +209,7 @@
    "source": [
     "In this lesson, we completed the work of adding our contacts table.  We did this by connecting the related `company_pk` to our contacts, and then specifying that the model should be created as a table.\n",
     "\n",
-    "After performing this work, we checked that we properly associated our data in snowflake."
+    "After performing this work, we checked that we properly associated our data in postgres."
    ]
   }
  ],
